updated Home, NavBar, Footer, Contact, and Therapists

--- a/frontend/src/css/NavBar.css
+++ b/frontend/src/css/NavBar.css
@@ -18,6 +18,16 @@
   font-weight: 700;
 }
 
+.logo-link {
+  color: white;
+  text-decoration: none;
+}
+
+.logo-link:hover {
+  text-decoration: none;
+}
+
+
 .nav-links {
   display: flex;
   list-style: none;
